exports[`Test contact actions should handle initializeCreateOrEditContact action with empty params 1`] = `
Array [
  Object {
    "type": "LOADING_CONTACT",
  },
  Object {
    "contact": undefined,
    "type": "INITIALIZE_CONTACT",
  },
]
`;

exports[`Test contact actions should handle initializeCreateOrEditContact action with id params 1`] = `
Array [
  Object {
    "id": "1",
    "type": "REQUEST_CONTACT",
  },
]
`;

exports[`Test contact actions should handle initializeCreateOrEditContact action with id params already in store 1`] = `Array []`;

exports[`Test contact actions should handle loadingContact action 1`] = `
Array [
  Object {
    "type": "LOADING_CONTACT",
  },
]
`;

exports[`Test contact actions should handle onContactAttributeBlur action 1`] = `
Array [
  Object {
    "name": "email",
    "type": "VALIDATE_CONTACT_ATTRIBUTE",
    "value": "new@email.com",
  },
]
`;

exports[`Test contact actions should handle onContactAttributeChange action 1`] = `
Array [
  Object {
    "name": "email",
    "type": "UPDATE_CONTACT_ATTRIBUTE",
    "value": "new@email.com",
  },
]
`;

exports[`Test contact actions should handle recieveContact action 1`] = `
Array [
  Object {
    "contact": Object {
      "email": "test@test.es",
      "imgUrl": "",
      "name": "test",
      "phoneNumber": "123123123",
    },
    "type": "INITIALIZE_CONTACT",
  },
]
`;

exports[`Test contact actions should handle saveContact with errors action 1`] = `
Array [
  Object {
    "type": "VALIDATE_CONTACT",
  },
  Object {
    "contact": Object {
      "email": "",
      "imgUrl": "",
      "name": "",
      "phoneNumber": "",
    },
    "errors": Object {},
    "type": "REQUEST_SAVE_CONTACT",
  },
]
`;
